--- a/style.css
+++ b/style.css
@@ -97,3 +97,40 @@ li.dropdown {
     margin-left: 100px;
     padding: 10px;
 }
+.wrapper{
+    background: white;
+    width: 1050px;
+    height: 500px;
+    border-radius: 15px;
+    padding: 20px;
+    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.4);
+}
+h2{
+    text-align: center;
+    background-color: white;
+}
+hr{
+    width: 150px;
+    margin: 10px auto;
+}
+.members{
+    display: flex;
+}
+.team-members{
+    margin: 20px;
+}
+.team-members img{
+    width: 280px;
+    background: none;
+    border-radius: 70%;
+}
+
+.name-member1{
+    text-align: center;
+    margin: 10px;
+}
+.desc-member1{
+    text-align: center;
+    font-size: 15px;
+    margin: 10px;
+}
