--- a/design.css
+++ b/design.css
@@ -9,7 +9,7 @@
 
 .hero {
     position: relative; 
-    height: 100vh;
+    height: 10vh;
     width: 98.4vw;
     display: flex;
     
@@ -28,33 +28,6 @@
 }
 
 
-.quote {
-
-    background-color: transparent;
-    margin-top: 45vh;
-    margin-left: -10%;
-    margin-right: 10%;
-    z-index: 1;
-   
-}
-
-.quote h1{
-    background-color: transparent;
-    font-size: 2.25vw;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    text-align: center;
-}
-
-.quote h2{
-    background-color: transparent;
-    font-size: 1.75vw;
-    text-align: right;
-    margin-right: 5%;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
-
-
-
 
 .logo{
     overflow: auto;
@@ -66,9 +39,10 @@
 
 
 .logo img{
-    margin-top: 10px;
+    margin-top: 7.5%;
     margin-left: 10px;
-    height: 7.5%;
+    height: 50%;
+    align-items: center;
     width: 60%;
     opacity: 1;
     float: left;
