--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@
 
   
 li a, .dropbtn {
-    display: block;
+    display: inline-block;
     background-color: transparent;
     text-align: center;
     padding: 14px 16px;
