--- a/style.css
+++ b/style.css
@@ -1,363 +1,414 @@
-
 * {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Mate SC";
+  box-sizing: border-box;
 }
 
-body{
-    background-color: #A5B83D;
+body {
+  background-color: #525136;
 }
+
 .header {
-   overflow: auto;
-    padding: 10px;
-    margin-left: auto;
-    margin-right: auto;
-}
-.header-text1{
-    text-align: center;
+  display: grid;
+  place-items: center;
+  padding: 10px;
 }
 
-.header a:link, a:visited {
-    color: black;
+.header-text1 {
+  text-align: center;
+}
+
+.header a:link,
+a:visited {
+  color: black;
 }
 
 .header img {
-    float: left;
-    width: 35px;
-    height: 35px;
+  float: left;
+  width: 35px;
+  height: 35px;
 }
 
 .header h1 {
-    float: left;
-    margin-left: 10px;
+  float: left;
+  margin-left: 10px;
+  font-family: "Mate SC";
+  font-size: 25px;
+  color: #f6f7ef;
 }
 
 .socials img {
-    float: right;
-    margin-top: 7.5px;
-    margin-right: 15px;
-    width: 30px;
-    height: 30px;
-    background-color: white;
+  float: right;
+  margin-top: 7.5px;
+  margin-right: 15px;
+  width: 30px;
+  height: 30px;
+  background-color: white;
 }
 
 .topnav a {
-    background-color: white;
-    font-weight: bold;
+  background-color: white;
+  font-weight: bold;
 }
 
 .topnav ul {
-    background-color: white;
-    border-width: 10px;
-    border-color: black;
-    list-style-type: none;
-    overflow: hidden;
+  background-color: white;
+  border-width: 10px;
+  border-color: black;
+  list-style-type: none;
+  overflow: hidden;
 }
 
 .topnav li {
-    float: left;
+  float: left;
 }
-  
-li a, .dropbtn {
-    display: inline-block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+
+li a,
+.dropbtn {
+  display: inline-block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
-  
-li a:hover, .dropdown:hover .dropbtn {
-    background-color: black;
-    color: white;
+
+li a:hover,
+.dropdown:hover .dropbtn {
+  background-color: black;
+  color: white;
 }
-  
+
 li.dropdown {
-    display: inline-block;
+  display: inline-block;
 }
-  
+
 .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: black;
-    min-width: 160px;
-    z-index: 1;
+  display: none;
+  position: absolute;
+  background-color: black;
+  min-width: 160px;
+  z-index: 1;
 }
 
 .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
 }
 
-.dropdown-content a:hover {color: white;}
+.dropdown-content a:hover {
+  color: white;
+}
 
 .dropdown:hover .dropdown-content {
-    display: block;
+  display: block;
 }
 
 .home-box {
-    float: left;
-    width: 400px;
-    margin-top: 50px;
-    margin-left: 100px;
-    padding: 10px;
+  float: left;
+  width: 400px;
+  margin-top: 50px;
+  margin-left: 100px;
+  padding: 10px;
 }
 
-
-/*volunteer*/
 .volunteer-box {
-    float: left;
-    width: 400px;
-    margin-top: 50px;
-    margin-left: 100px;
-    padding: 10px;
+  float: left;
+  width: 400px;
+  margin-top: 50px;
+  margin-left: 100px;
+  padding: 10px;
 }
-.mentor-wrapper{
-    background-color: white;
-    width: 1000px;
-    height: 200px;
-    border-radius: 15px;
-    padding: 20px;
-    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.4);
-    margin: 20px;
+.mentor-wrapper {
+  background-color: white;
+  width: 1000px;
+  height: 200px;
+  border-radius: 15px;
+  padding: 20px;
+  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.4);
+  margin: 20px;
 }
-.mentor{
-    font-size: 1.2rem;
-    padding: 20px;
-    display: block;
+.mentor {
+  font-size: 1.2rem;
+  padding: 20px;
+  display: block;
 }
-.mentor h4,.mentee h4{
-    text-align: center;
+.mentor h4,
+.mentee h4 {
+  text-align: center;
 }
-.mentor button{
-    position: absolute;
-    background-color: transparent;
-    top: 50%;
-    color: white;
-    border-radius: 10px;
-    border-width: 2px;
-    color: black;
-    min-width: 210px;
-    min-height: 30px;
+.mentor button {
+  position: absolute;
+  background-color: transparent;
+  top: 50%;
+  color: white;
+  border-radius: 10px;
+  border-width: 2px;
+  color: black;
+  min-width: 210px;
+  min-height: 30px;
 
-        top: 400px;
-        margin-left: 735px;
-        position: absolute;
-        z-index: 2; 
-        
+  top: 400px;
+  margin-left: 735px;
+  position: absolute;
+  z-index: 2;
 }
-.mentor button:hover{
-    background-color: yellow;
-    transition: 0.4s;
-}
-
-.mentee-wrapper{
-    background-color: white;
-    width: 1000px;
-    height: 200px;
-    border-radius: 15px;
-    padding: 20px;
-    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.4);
-    margin: 20px;
-}
-.mentee{
-    font-size: 1.2rem;
-    padding: 20px;
-}
-.mentee button{
-    position: absolute;
-    background-color: transparent;
-    top: 50%;
-    color: white;
-    border-radius: 10px;
-    border-width: 2px;
-    color: black;
-    min-width: 210px;
-    min-height: 30px;
-
-        top: 620px;
-        margin-left:735px;
-        position: absolute;
-        z-index: 2; 
-        
-}
-.mentee button:hover{
-    background-color: yellow;
-    transition: 0.4s;
+.mentor button:hover {
+  background-color: yellow;
+  transition: 0.4s;
 }
 
+.mentee-wrapper {
+  background-color: white;
+  width: 1000px;
+  height: 200px;
+  border-radius: 15px;
+  padding: 20px;
+  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.4);
+  margin: 20px;
+}
+.mentee {
+  font-size: 1.2rem;
+  padding: 20px;
+}
+.mentee button {
+  position: absolute;
+  background-color: transparent;
+  top: 50%;
+  color: white;
+  border-radius: 10px;
+  border-width: 2px;
+  color: black;
+  min-width: 210px;
+  min-height: 30px;
+
+  top: 620px;
+  margin-left: 735px;
+  position: absolute;
+  z-index: 2;
+}
+.mentee button:hover {
+  background-color: yellow;
+  transition: 0.4s;
+}
 
 /*contact*/
-.contact-home-box{
-    float: left;
-    width: 400px;
-    margin-top: 150px;
-    margin-left: 100px;
-    padding: 10px;
+.contact-home-box {
+  float: left;
+  width: 400px;
+  margin-top: 150px;
+  margin-left: 100px;
+  padding: 10px;
 }
-.contact-wrapper{
-    background-color: white;
-    width: 500px;
-    height: 600px;
-    border-radius: 15px;
-    padding: 20px;
-    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.4);
-    margin-left: 600px;
-    margin-top: 100px;
-    margin-bottom: 20px;
+.contact-wrapper {
+  background-color: white;
+  width: 500px;
+  height: 600px;
+  border-radius: 15px;
+  padding: 20px;
+  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.4);
+  margin-left: 600px;
+  margin-top: 100px;
+  margin-bottom: 20px;
 }
-input[type=text], input[type=email] {
-    padding: 10px;
-    margin: 10px;
-    border-radius: 10px;
-    border-width: 0.5px;
-    width: 95%;
+input[type="text"],
+input[type="email"] {
+  padding: 10px;
+  margin: 10px;
+  border-radius: 10px;
+  border-width: 0.5px;
+  width: 95%;
 }
 textarea {
-    padding: 10px;
-    margin-right: 10px;
-    border-radius: 10px;
-    border-width: 0.5px;
-    margin: 20px;
-    width: 90%;
+  padding: 10px;
+  margin-right: 10px;
+  border-radius: 10px;
+  border-width: 0.5px;
+  margin: 20px;
+  width: 90%;
 }
 
-.contact-submit{
-    width: 80px;
-    height: 30px;
-    position: relative;
-    background-color: black;
-    color: white;
-    border-radius: 10px;
-    border-width: 0;
-    font-size: 20px;
-    text-align: center;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
+.contact-submit {
+  width: 80px;
+  height: 30px;
+  position: relative;
+  background-color: black;
+  color: white;
+  border-radius: 10px;
+  border-width: 0;
+  font-size: 20px;
+  text-align: center;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
 }
 
-.contact-submit:hover{
-    background-color: gray;
-    transition: 0.4s;
+.contact-submit:hover {
+  background-color: gray;
+  transition: 0.4s;
 }
-.contact-social img{
-    position: relative;
-    margin-top: 10px;
-    width: 30px;
-    height: 30px;
+.contact-social img {
+  position: relative;
+  margin-top: 10px;
+  width: 30px;
+  height: 30px;
 }
 
 /*team*/
-.wrapper{
-    background: white;
-    width: 90%;
-    height: 50%;
-    border-radius: 15px;
-    margin-top: 2rem;
-    margin-left: 5%;
-    padding: 3rem;
-    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.4);
-    
-   
+.wrapper {
+  background: white;
+  width: 90%;
+  height: 50%;
+  border-radius: 15px;
+  margin-top: 2rem;
+  margin-left: 5%;
+  padding: 3rem;
+  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.4);
 }
 
-h2{
-    text-align: center;
-    text-transform: uppercase;
-    text-shadow: 0.1rem 0.1rem 0.15rem rgba(0, 0, 0, 0.5);
-    margin-bottom: 2rem;
+h2 {
+  text-align: center;
+  text-transform: uppercase;
+  text-shadow: 0.1rem 0.1rem 0.15rem rgba(0, 0, 0, 0.5);
+  margin-bottom: 2rem;
 }
 
-
-.hero{
-    justify-content: space-between;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 2em;
-    
+.hero {
+  justify-content: space-between;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 2em;
 }
-.card{
-    height: 18rem;
-    width: 13rem;
-    display: inline-block;
-    color: aliceblue;
-    overflow: hidden; 
-    border-radius: 10px;
-    border: 0.15em solid #ffffff;
-    position: relative;
-    box-shadow: 1rem 1rem 1.5rem rgba(0, 0, 0, 0.5);
-
+.card {
+  height: 18rem;
+  width: 13rem;
+  display: inline-block;
+  color: aliceblue;
+  overflow: hidden;
+  border-radius: 10px;
+  border: 0.15em solid #ffffff;
+  position: relative;
+  box-shadow: 1rem 1rem 1.5rem rgba(0, 0, 0, 0.5);
 }
 .pic {
-    height: 100%;
-    width: 100%;
-    border-radius: 10px;
-    object-fit: cover;
-
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+  object-fit: cover;
 }
 
-.info{
-    height: 100%;
-    width: 100%;
-    bottom: -100%;
-    left: 0;
-    position: absolute;
-    background: rgba(78, 114, 185, 0.242);
-    backdrop-filter: blur(5px);
-    padding: 1rem; 
-    font-family: 'Times New Roman', Times, serif;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
- }
- 
- .card:hover .info{
-     bottom: 0;
-     transition: 1.5s;
- }
- 
- .a{
-     text-transform: uppercase;
-     font-weight: 500;
-     font-size: 32px;
- }
- 
- .b{
-     text-transform: capitalize;
-     font-weight: 300;
-     font-size: 26px;
- }
-
- .c{
-    word-wrap: break-word;
-    margin-right: 0.5rem;
- }
-
- .con{
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    bottom: 5%;
-    width: 100%;
-    height: 5%;
-    
-   
-
+.info {
+  height: 100%;
+  width: 100%;
+  bottom: -100%;
+  left: 0;
+  position: absolute;
+  background: rgba(78, 114, 185, 0.242);
+  backdrop-filter: blur(5px);
+  padding: 1rem;
+  font-family: "Times New Roman", Times, serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.con img{
-    height: 50%;
-    width: 50%;
+.card:hover .info {
+  bottom: 0;
+  transition: 1.5s;
 }
 
-
-.con img:hover{
-    transform: scale(1.5);
+.a {
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 32px;
 }
- 
+
+.b {
+  text-transform: capitalize;
+  font-weight: 300;
+  font-size: 26px;
+}
+
+.c {
+  word-wrap: break-word;
+  margin-right: 0.5rem;
+}
+
+.con {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  bottom: 5%;
+  width: 100%;
+  height: 5%;
+}
+
+.con img {
+  height: 50%;
+  width: 50%;
+}
+
+.con img:hover {
+  transform: scale(1.5);
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  position: fixed;
+  bottom: 0;
+  background-color: #525136;
+  color: white;
+  padding-bottom: 1%;
+}
+
+.footer-bar,
+.footer-logo {
+  flex: 0 0 auto;
+}
+
+.footer-bar a {
+  text-decoration: none;
+  color: white;
+  font-size: 5px;
+}
+
+/* .footer-bar.left {
+  width: 50%;
+  height: 100px;
+  float: left;
+}
+
+.footer-bar.right {
+  width: 50%;
+  height: 100px;
+  float: center;
+} */
+
+.footer a {
+  text-decoration: none;
+  color: white;
+  font-size: 10px;
+}
+
+.footer-logo a {
+  font-size: 20px;
+}
+
+ul.no-bullets {
+  list-style-type: none;
+  position: relative;
+  margin: 0;
+  padding: 0;
+}
+
+ul.no-bullets li {
+  padding-bottom: 0px;
+  margin: 0;
+}
