--- a/css/contact.css
+++ b/css/contact.css
@@ -98,17 +98,12 @@
     margin-top: 20px;
     padding: 5px;
     background-color: white;
+    color: black;
     border: 1px solid white;
     border-radius: 5px;
     font-family: 'Montserrat', serif;
     font-size: 1em;
 }
-
-.submit_button:hover {
-    background-color: #2C360C;
-    color: white;
-}
-
 
 /* Media Queries for Responsive Design */
 /* less content in mobile version for simpler viewing */
